resolve conflict and update doi tra